# RustRefactor-EssMathAI

./: README.md
ch2-data-viz/: Cargo.toml
ch2-data-viz/src/: main.rs
ch2-real-data-simulated/: Cargo.toml
ch2-real-data-simulated/src/: main.rs
data/: weight-height.csv
