[package]
name = "ch2-data-viz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
itertools = "0.10.5"
ndarray = "0.15.6"
ndarray-csv = "0.5.1"
plotlib = "0.5.1"
plotters = "0.3.4"
rand = "0.8.5"
rand_distr = "0.4.3"
tuple_utils = "0.4.0"
