[package]
name = "ch2-real-data-simulated"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
linfa = "0.6.1"
plotters = "0.3.4"
polars = "0.27.2"
polars-core = "0.27.2"
polars-io = "0.27.2"
